async get_address and batch
